Fix overflow-y

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html{
+  overflow-y: hidden;
+}
 /* Paragraph */
 .button-text {
   @apply text-base font-medium;
